# Virtual-No-Ads

./: .gitignore  Cargo.toml  Makefile  README.md  authorizePCAP  update_list.sh
.github/workflows/: rust-checker.yml
assets/: adsdomain.txt  lists.txt
raspi/: iptables_conf.sh  raspberrypi_config.md  refresh_network.sh  wireguard.md
src/: block_ads.rs  main.rs
