[package]
name = "virtual-no-ads"
version = "0.1.0"
authors = [
  "Timothé MEDICO",
  "Lou ONÉZIME",
  "Axel TACHEAU"
]
edition = "2021"
readme = "README.md"
repository = "https://github.com/PoCInnovation/Virtual-No-Ads"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
dns-lookup = "2.0.2"
trust-dns-resolver = "0.23.0"
tokio = { version = "1", features = ["full"] }